<resources>
    <string name="app_name">Landmark City</string>
    <string name="hint_user_name">Email Id</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="registerText">Don\'t have account?</string>
    <string name="hintPassword">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer closed</string>
    <string name="error_phone_no_invalid">Mobile number length must be 10 digit</string>
    <string name="error_additional_zero">Number can not have 0 in start</string>
    <string name="error_invalid_password">Password length must be 4</string>
    <string name="error_invalid_user_name">invalid user name</string>
    <string name="enterFirstName">name can not be empty</string>
    <string name="error_first_name">name can not be empty</string>
    <string name="network_error">No Internet Connection, Please Connect to Internet</string>
    <string name="loginText">Sign in</string>
    <string name="search_hint">Search here...</string>
    <string name="register_now_text">Register now</string>
    <string name="verify_text">Verify</string>
    <string name="resend_text">Resend</string>
    <string name="star_">*</string>
    <string name="otp_error">Please Enter OTP</string>
    <string name="greetings_title_text">Greetings</string>
    <string name="add_a_caption_text">Add a Caption</string>
    <string name="send_button">SEND</string>
    <string name="greetings_sent_msg">Greetings sent</string>
    <string name="temprature_text">temperature</string>
    <string name="checkable">checkAble</string>
    <string name="parent">PARENT</string>
    <string name="student">STUDENT</string>
    <string name="partner">PARTNER</string>
    <string name="vendor">VENDOR</string>
    <string name="admin">ADMIN</string>
</resources>
