<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background"
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayout"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp40"
            android:paddingRight="@dimen/dp40">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:padding="@dimen/dp8"
                android:scaleType="fitXY"
                android:src="@drawable/land_logo" />

            <LinearLayout
                android:id="@+id/relativeLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/iv"
                android:layout_marginTop="@dimen/dp28"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal"
                android:padding="@dimen/dp2"
                android:weightSum="4">

                <EditText
                    android:id="@+id/editDigit1"
                    style="@style/pin_edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:hint="OTP"
                    android:inputType="textPassword"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editDigit2"
                    style="@style/pin_edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:hint="@string/star_"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editDigit3"
                    style="@style/pin_edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:hint="@string/star_"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editDigit4"
                    style="@style/pin_edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:hint="*"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editDigitHidden"
                    style="@style/pin_edittext_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:hint="*"
                    android:visibility="gone" />

            </LinearLayout>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp36"
                android:layout_below="@+id/relativeLogin"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/btn_background"
                android:text="@string/verify_text"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnVerify"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp12"
                android:text="@string/resend_text"
                android:textSize="@dimen/font_16" />


        </RelativeLayout>
    </ScrollView>